Fixing code extending beyond in phones. Now it will add a scrollbar if it overflows

--- a/static/extra.css
+++ b/static/extra.css
@@ -187,7 +187,7 @@ pre {
 
 @media (min-width: 1024px) {
     .article-grid {
-        grid-template-columns: 3fr 1fr;
+        grid-template-columns: 75% 25%;
         grid-template-areas:
             "thumbnail toc"
             "thetext toc";
@@ -217,7 +217,7 @@ pre {
 
 @media (max-width: 1023px) {
     .article-grid {
-        grid-template-columns: 1fr;
+        grid-template-columns: 100%;
         grid-template-rows: auto auto auto;
         grid-template-areas:
             "thumbnail"
@@ -243,11 +243,5 @@ pre {
         border-left: none;
         border-top: 1px solid var(--pico-muted-color);
         border-bottom: 1px solid var(--pico-muted-color);
-    }
-}
-
-@media (max-width: 575px) {
-    pre {
-        width: 350px;
     }
 }
